# GPUMLib

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/DBN/: DBN.h  HostDBN.h
src/KMeans/: KMeans.cpp  KMeans.h  KMeansKernels.cu  kmeanskernels.h
src/MBP/: BackPropagation.cu  BackPropagation.h  CalcLocalGradSelectiveInputs.cu  CalculateRMS.cu  CorrectWeightsKernel.cu  CorrectWeightsSelInputs.cu  FireLayerKernel.cu  FireLayerNeuronsKernel.cu  LocalGradientKernel.cu  MBPkernels.h  MultipleBackPropagation.cu  MultipleBackPropagation.h  RobustLearning.cu  SelectiveInputs.cu
src/NMF/: BaseNMF.h  NMFadditiveDivergence.cu  NMFadditiveDivergence.h  NMFadditiveDivergenceKernels.cu  NMFadditiveEuclidian.cu  NMFadditiveEuclidian.h  NMFkernels.cu  NMFkernels.h  NMFmultiplicativeDivergence.cu  NMFmultiplicativeDivergence.h  NMFmultiplicativeEuclidian.cu  NMFmultiplicativeEuclidian.h  NMFquality.cu
src/RAN/: RANKernels.cu  ResourceAllocatingNetwork.cpp  ResourceAllocatingNetwork.h  rankernels.h  utils.cpp  utils.h
src/RBF/: CenterAttribution.cu  EuclidianDistanceKernel.cu  RBFKernels.cu  RadialBasisFunction.cpp  RadialBasisFunction.h  rbf.h  rbfkernels.h  utils.cpp  utils.h
src/RBM/: HostRBM.h  RBM.h  RBMCorrectWeights.cu  RBMconfig.h  RBMinitKernels.cu  RBMstatus.cu  RBMstatusSmall.cu  rbm.cu
src/SVM/: SVM.h  SVM_cuda_code.h  Settings.h  svm_kernel_type.h
src/common/: CudaDefinitions.h  CudaStreams.h  Utilities.h  config.h
src/examples/: CMakeLists.txt  Makefile  cmake_install.cmake
src/examples/ATS/: ATS.cpp  CMakeLists.txt  Configuration.h  DataInputFile.h  Makefile  cmake_install.cmake
src/examples/BP/: BP.cpp  CMakeLists.txt  Makefile  cmake_install.cmake
src/examples/DBN/: CMakeLists.txt  Configuration.h  DBNapp.cpp  DataInputFile.h  Makefile  OutputFile.h  cmake_install.cmake
src/examples/DBNanalysis/: DBNanalysis.csproj  DBNanalysis.sln  DBNmodel.cs  DataSet.cs  FormAnalysisDBN.Designer.cs  FormAnalysisDBN.cs  FormAnalysisDBN.resx  ModelFilenameEditor.cs  Program.cs  RBMlayer.cs  Settings.cs
src/examples/DBNanalysis/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/examples/Dataset/: Dataset.cpp  Dataset.h
src/examples/FacesNMF/: CMakeLists.txt  Definitions.h  FacesNMF.cpp  FacesNMF.h  FacesNMF.rc  FacesNMFDlg.cpp  FacesNMFDlg.h  HostNMF.h  Matrix.h  NMFfaces.h  resource.h  stdafx.cpp
src/examples/FacesNMF/images/: face00037.pgm  face00301.pgm  face00349.pgm  face00429.pgm  face00441.pgm  face00450.pgm  face00492.pgm  face00543.pgm  face00544.pgm  face00545.pgm  face00547.pgm  face00548.pgm  face00549.pgm  face00729.pgm  face00730.pgm  face00732.pgm  face00747.pgm  face00749.pgm  face00750.pgm  face00752.pgm  face00826.pgm  face00829.pgm  face00856.pgm  face01432.pgm  face01443.pgm  face01445.pgm  face01446.pgm  face01611.pgm  face01612.pgm
src/examples/MBP/: CMakeLists.txt  MBP.cpp  MBPutils.cpp  MBPutils.h  Makefile  cmake_install.cmake  twospirals.txt
src/examples/RAN/: CMakeLists.txt  Makefile  RAN.cpp  cmake_install.cmake
src/examples/RBF/: CMakeLists.txt  Makefile  RBF.cpp  cmake_install.cmake  satellite_n.data
src/examples/SVM/: CMakeLists.txt  Makefile  cmake_install.cmake  svm_example.cu
src/examples/common/: ConfusionMatrix.h  CudaInit.h  OutputFile.h
src/examples/reduction/: CMakeLists.txt  Makefile  cmake_install.cmake  reductionapp.cpp
src/memory/: BaseArray.h  BaseMatrix.h  CudaArray.h  CudaMatrix.h  DeviceAccessibleVariable.h  DeviceArray.h  DeviceMatrix.h  HostArray.h  HostMatrix.h
src/random/: random.cu  random.h
src/reduction/: MaxKernel.cu  MinKernel.cu  SumKernel.cu  SumWarp.h  reduction.cpp  reduction.h
(+5 files in other folders)
