cmake_minimum_required (VERSION 2.8)
project (GPUMLib)

option(BUILD_RAN_AND_RBF_NETWORKS "Build RAN and RBF networks (requires CULA)" ON)
option(CULA_R17_OR_ABOVE "CULA version is R17 or above" ON)

# check 64 bit
if( CMAKE_SIZEOF_VOID_P MATCHES 4 )
	set( HAVE_64_BIT 0 )
else( CMAKE_SIZEOF_VOID_P MATCHES 4 )
	set( HAVE_64_BIT 1 )
endif( CMAKE_SIZEOF_VOID_P MATCHES 4 )

IF(UNIX AND HAVE_64_BIT AND NOT APPLE)
	set(CMAKE_C_FLAGS -m64) 
	set(CMAKE_CXX_FLAGS -m64)
	set(CUDA_64_BIT_DEVICE_CODE ON)
	set(CUDA_64_BUILD_EMULATION ON)
ENDIF(UNIX AND HAVE_64_BIT AND NOT APPLE)

IF(UNIX AND NOT HAVE_64_BIT AND NOT APPLE)
	set(CMAKE_C_FLAGS -m32) 
	set(CMAKE_CXX_FLAGS -m32)
	set(CUDA_64_BIT_DEVICE_CODE OFF)
	set(CUDA_64_BUILD_EMULATION OFF)
ENDIF(UNIX AND NOT HAVE_64_BIT AND NOT APPLE)

IF(APPLE)
	set(CMAKE_C_FLAGS -m32) 
	set(CMAKE_CXX_FLAGS -m32)
	set(CUDA_64_BIT_DEVICE_CODE OFF)
	set(CUDA_64_BUILD_EMULATION OFF)
ENDIF(APPLE)

set(CUDA_BUILD_EMULATION OFF)

find_package(CUDA)

add_subdirectory (src)
